# invoice-aggregation

./: .env.example  .gitignore  Cargo.toml  Readme.md  clients.example.json  clients.json
src/: main.rs
src/models/: args.rs  errors.rs  mod.rs  teamwork.rs
src/systems/: builder.rs  clients_parser.rs  mod.rs  time_api.rs  util.rs
