[package]
name = "invoice-aggregation"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
clap_derive = "4.5.32"
dotenv = "0.15.0"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.25", features = [
  "serde-human-readable",
  "local-offset",
  "formatting",
] }
time-macros = "0.2.20"
tokio = { version = "1", features = ["full"] }
